# toil-programming-question

./: .gitignore  README.md  attack_planner  example_output.json  pyproject.toml  requirements.txt  the_problem.txt
attack_planner.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/attack_planner/: __main__.py  attack_planner.py  cli.py  distribution_network.py  helloworld.py  temp.py
src/attack_planner/tests/: test_generator.py  test_runner.py
src/attack_planner/tests/test_cases/: bottleneck.json  bottleneck_simple.json  dead_end_island.json  oversupply_bottleneck.json  parallel_pipes.json  reroute_test.json  stress_test_large.json  triangle_cycle.json
tests/: example_input.json  simple_input.json
