[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "attack_planner"
version = "0.1.0"
authors = [
  { name="Your Name", email="your.email@example.com" },
]
description = "Arctic Avengers fossil fuel distribution network attack planner"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "python-igraph>=0.11.0",
    "click>=8.0.0",
]

[project.scripts]
attack_planner = "src.attack_planner.attack_planner:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]